--- a/makefile.f2py
+++ b/makefile.f2py
@@ -84,7 +84,7 @@ combAlgLib:	$(OBJEXE)
 combAlg:	$(OBJEXE) src_f90/mainfpy.f90
 		f2py -c -m combAlg --f90flags="-fopenmp" --arch="-fopenmp"\
 		src_f90/fobjective.f90 src_f90/mainfpy.f90 \
-                src_f90/hbprof_new.f90 \
+                src_f90/hbprof_new.f90 src_f90/readTables_new.f90\
 		src_f90/bisection.f90  src_f90/simpleFModel.f90 \
                 src_f90/forwardModel.f90 src_f90/emissivity-sp.f src_f90/radtran_tau_dble.f src_f90/multiscatter.f90\
                 src_f90/absorption3D.f90  $(OBJ)  $(LIB) $(LIBES) -lgfortran
